[Cocoa] RemoteMediaPlayerProxy does not receive acceleratedRenderingStateChanged() when video element switches sources https://bugs.webkit.org/show_bug.cgi?id=229092 <rdar://81902163>

Reviewed by Eric Carlson.

Follow up to r280723; in that patch, a call to acceleratedRenderingStateChanged() was added to
the MediaPlayerPrivateRemote, but only for non-Cocoa ports. Add the same method to the constructor
for the Cocoa version as well.

* WebProcess/GPU/media/cocoa/MediaPlayerPrivateRemoteCocoa.mm:
(WebKit::MediaPlayerPrivateRemote::MediaPlayerPrivateRemote):


Canonical link: https://commits.webkit.org/240515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281044 268f45cc-cd09-0410-ab3c-d52691b4dbfc